// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessagesNavItem no messages 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudCheckIcon)
                    className="icon-inline"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                      />
                    </svg>
                  </Memo(CloudCheckIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="success"
                  linkOnClick={[Function]}
                  linkText="Manage repositories"
                  linkTo="/site-admin/external-services"
                  showLink={false}
                  text="All repositories hosted on the configured code hosts are synced."
                  title="Repositories up to date"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
                    key="All repositories hosted on the configured code hosts are synced."
                  >
                    <h4>
                      <Memo(CloudCheckIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                          />
                        </svg>
                      </Memo(CloudCheckIcon)>
                      Repositories up to date
                    </h4>
                    <p>
                      All repositories hosted on the configured code hosts are synced.
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one CloningProgress message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudSyncIcon)
                    className="icon-inline"
                    data-tooltip="Cloning repositories..."
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Cloning repositories..."
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M19 12V13.5C21.21 13.5 23 15.29 23 17.5C23 18.32 22.75 19.08 22.33 19.71L21.24 18.62C21.41 18.28 21.5 17.9 21.5 17.5C21.5 16.12 20.38 15 19 15V16.5L16.75 14.25L16.72 14.22C16.78 14.17 16.85 14.13 19 12M19 23V21.5C16.79 21.5 15 19.71 15 17.5C15 16.68 15.25 15.92 15.67 15.29L16.76 16.38C16.59 16.72 16.5 17.1 16.5 17.5C16.5 18.88 17.62 20 19 20V18.5L21.25 20.75L21.28 20.78C21.22 20.83 21.15 20.87 19 23M13 17.5C13 13.91 15.91 11 19.5 11C20.78 11 21.97 11.38 23 12C22.13 10.9 20.84 10.14 19.35 10.03C18.67 6.59 15.64 4 12 4C9.11 4 6.6 5.64 5.35 8.03C2.34 8.36 0 10.9 0 14C0 17.31 2.69 20 6 20H13.5C13.18 19.23 13 18.39 13 17.5Z"
                      />
                    </svg>
                  </Memo(CloudSyncIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="progress"
                  key="0"
                  linkOnClick={[Function]}
                  linkText="Configure synced repositories"
                  linkTo="/site-admin/external-services"
                  showLink={false}
                  text="Currently cloning repositories..."
                  title="Repositories cloning"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-progress"
                    key="Currently cloning repositories..."
                  >
                    <h4>
                      <Memo(CloudSyncIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M19 12V13.5C21.21 13.5 23 15.29 23 17.5C23 18.32 22.75 19.08 22.33 19.71L21.24 18.62C21.41 18.28 21.5 17.9 21.5 17.5C21.5 16.12 20.38 15 19 15V16.5L16.75 14.25L16.72 14.22C16.78 14.17 16.85 14.13 19 12M19 23V21.5C16.79 21.5 15 19.71 15 17.5C15 16.68 15.25 15.92 15.67 15.29L16.76 16.38C16.59 16.72 16.5 17.1 16.5 17.5C16.5 18.88 17.62 20 19 20V18.5L21.25 20.75L21.28 20.78C21.22 20.83 21.15 20.87 19 23M13 17.5C13 13.91 15.91 11 19.5 11C20.78 11 21.97 11.38 23 12C22.13 10.9 20.84 10.14 19.35 10.03C18.67 6.59 15.64 4 12 4C9.11 4 6.6 5.64 5.35 8.03C2.34 8.36 0 10.9 0 14C0 17.31 2.69 20 6 20H13.5C13.18 19.23 13 18.39 13 17.5Z"
                          />
                        </svg>
                      </Memo(CloudSyncIcon)>
                      Repositories cloning
                    </h4>
                    <p>
                      Currently cloning repositories...
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one CloningProgress message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={true}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudSyncIcon)
                    className="icon-inline"
                    data-tooltip="Cloning repositories..."
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Cloning repositories..."
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M19 12V13.5C21.21 13.5 23 15.29 23 17.5C23 18.32 22.75 19.08 22.33 19.71L21.24 18.62C21.41 18.28 21.5 17.9 21.5 17.5C21.5 16.12 20.38 15 19 15V16.5L16.75 14.25L16.72 14.22C16.78 14.17 16.85 14.13 19 12M19 23V21.5C16.79 21.5 15 19.71 15 17.5C15 16.68 15.25 15.92 15.67 15.29L16.76 16.38C16.59 16.72 16.5 17.1 16.5 17.5C16.5 18.88 17.62 20 19 20V18.5L21.25 20.75L21.28 20.78C21.22 20.83 21.15 20.87 19 23M13 17.5C13 13.91 15.91 11 19.5 11C20.78 11 21.97 11.38 23 12C22.13 10.9 20.84 10.14 19.35 10.03C18.67 6.59 15.64 4 12 4C9.11 4 6.6 5.64 5.35 8.03C2.34 8.36 0 10.9 0 14C0 17.31 2.69 20 6 20H13.5C13.18 19.23 13 18.39 13 17.5Z"
                      />
                    </svg>
                  </Memo(CloudSyncIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="progress"
                  key="0"
                  linkOnClick={[Function]}
                  linkText="Configure synced repositories"
                  linkTo="/site-admin/external-services"
                  showLink={true}
                  text="Currently cloning repositories..."
                  title="Repositories cloning"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-progress"
                    key="Currently cloning repositories..."
                  >
                    <h4>
                      <Memo(CloudSyncIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M19 12V13.5C21.21 13.5 23 15.29 23 17.5C23 18.32 22.75 19.08 22.33 19.71L21.24 18.62C21.41 18.28 21.5 17.9 21.5 17.5C21.5 16.12 20.38 15 19 15V16.5L16.75 14.25L16.72 14.22C16.78 14.17 16.85 14.13 19 12M19 23V21.5C16.79 21.5 15 19.71 15 17.5C15 16.68 15.25 15.92 15.67 15.29L16.76 16.38C16.59 16.72 16.5 17.1 16.5 17.5C16.5 18.88 17.62 20 19 20V18.5L21.25 20.75L21.28 20.78C21.22 20.83 21.15 20.87 19 23M13 17.5C13 13.91 15.91 11 19.5 11C20.78 11 21.97 11.38 23 12C22.13 10.9 20.84 10.14 19.35 10.03C18.67 6.59 15.64 4 12 4C9.11 4 6.6 5.64 5.35 8.03C2.34 8.36 0 10.9 0 14C0 17.31 2.69 20 6 20H13.5C13.18 19.23 13 18.39 13 17.5Z"
                          />
                        </svg>
                      </Memo(CloudSyncIcon)>
                      Repositories cloning
                    </h4>
                    <p>
                      Currently cloning repositories...
                    </p>
                    <p
                      className="status-messages-nav-item__entry-link"
                    >
                      <AnchorLink
                        onClick={[Function]}
                        to="/site-admin/external-services"
                      >
                        <a
                          href="/site-admin/external-services"
                          onClick={[Function]}
                        >
                          Configure synced repositories
                        </a>
                      </AnchorLink>
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudAlertIcon)
                    className="icon-inline"
                    data-tooltip="Syncing repositories failed!"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Syncing repositories failed!"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M19,20H6C2.71,20 0,17.29 0,14C0,10.9 2.34,8.36 5.35,8.03C6.6,5.64 9.11,4 12,4C15.64,4 18.67,6.59 19.35,10.03C21.95,10.22 24,12.36 24,15C24,17.74 21.74,20 19,20M11,15V17H13V15H11M11,13H13V8H11V13Z"
                      />
                    </svg>
                  </Memo(CloudAlertIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="warning"
                  key="0"
                  linkOnClick={[Function]}
                  linkText="Edit \\"GitHub.com\\""
                  linkTo="/site-admin/external-services/abcd"
                  showLink={false}
                  text="failed to list organization kubernetes repos: request returned status 404: Not Found"
                  title="Syncing repositories from external service \\"GitHub.com\\" failed:"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                    key="failed to list organization kubernetes repos: request returned status 404: Not Found"
                  >
                    <h4>
                      <Memo(CloudAlertIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M19,20H6C2.71,20 0,17.29 0,14C0,10.9 2.34,8.36 5.35,8.03C6.6,5.64 9.11,4 12,4C15.64,4 18.67,6.59 19.35,10.03C21.95,10.22 24,12.36 24,15C24,17.74 21.74,20 19,20M11,15V17H13V15H11M11,13H13V8H11V13Z"
                          />
                        </svg>
                      </Memo(CloudAlertIcon)>
                      Syncing repositories from external service "GitHub.com" failed:
                    </h4>
                    <p>
                      failed to list organization kubernetes repos: request returned status 404: Not Found
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one ExternalServiceSyncError message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={true}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudAlertIcon)
                    className="icon-inline"
                    data-tooltip="Syncing repositories failed!"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Syncing repositories failed!"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M19,20H6C2.71,20 0,17.29 0,14C0,10.9 2.34,8.36 5.35,8.03C6.6,5.64 9.11,4 12,4C15.64,4 18.67,6.59 19.35,10.03C21.95,10.22 24,12.36 24,15C24,17.74 21.74,20 19,20M11,15V17H13V15H11M11,13H13V8H11V13Z"
                      />
                    </svg>
                  </Memo(CloudAlertIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="warning"
                  key="0"
                  linkOnClick={[Function]}
                  linkText="Edit \\"GitHub.com\\""
                  linkTo="/site-admin/external-services/abcd"
                  showLink={true}
                  text="failed to list organization kubernetes repos: request returned status 404: Not Found"
                  title="Syncing repositories from external service \\"GitHub.com\\" failed:"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                    key="failed to list organization kubernetes repos: request returned status 404: Not Found"
                  >
                    <h4>
                      <Memo(CloudAlertIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M19,20H6C2.71,20 0,17.29 0,14C0,10.9 2.34,8.36 5.35,8.03C6.6,5.64 9.11,4 12,4C15.64,4 18.67,6.59 19.35,10.03C21.95,10.22 24,12.36 24,15C24,17.74 21.74,20 19,20M11,15V17H13V15H11M11,13H13V8H11V13Z"
                          />
                        </svg>
                      </Memo(CloudAlertIcon)>
                      Syncing repositories from external service "GitHub.com" failed:
                    </h4>
                    <p>
                      failed to list organization kubernetes repos: request returned status 404: Not Found
                    </p>
                    <p
                      className="status-messages-nav-item__entry-link"
                    >
                      <AnchorLink
                        onClick={[Function]}
                        to="/site-admin/external-services/abcd"
                      >
                        <a
                          href="/site-admin/external-services/abcd"
                          onClick={[Function]}
                        >
                          Edit "GitHub.com"
                        </a>
                      </AnchorLink>
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one SyncError message as non-site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={false}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudCheckIcon)
                    className="icon-inline"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                      />
                    </svg>
                  </Memo(CloudCheckIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="warning"
                  key="0"
                  linkOnClick={[Function]}
                  linkText="Configure synced repositories"
                  linkTo="/site-admin/external-services"
                  showLink={false}
                  text="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                  title="Syncing repositories failed:"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                    key="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                  >
                    <h4>
                      <Memo(CloudAlertIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M19,20H6C2.71,20 0,17.29 0,14C0,10.9 2.34,8.36 5.35,8.03C6.6,5.64 9.11,4 12,4C15.64,4 18.67,6.59 19.35,10.03C21.95,10.22 24,12.36 24,15C24,17.74 21.74,20 19,20M11,15V17H13V15H11M11,13H13V8H11V13Z"
                          />
                        </svg>
                      </Memo(CloudAlertIcon)>
                      Syncing repositories failed:
                    </h4>
                    <p>
                      syncer.sync.store.upsert-repos: pg: unique constraint foobar
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;

exports[`StatusMessagesNavItem one SyncError message as site admin 1`] = `
<StatusMessagesNavItem
  fetchMessages={[Function]}
  history="[History]"
  isSiteAdmin={true}
>
  <ButtonDropdown
    className="nav-link py-0 px-0 percy-hide chromatic-ignore"
    isOpen={false}
    toggle={[Function]}
  >
    <Dropdown
      a11y={true}
      active={false}
      addonType={false}
      className="nav-link py-0 px-0 percy-hide chromatic-ignore"
      direction="down"
      group={true}
      inNavbar={false}
      isOpen={false}
      nav={false}
      setActiveFromChild={false}
      toggle={[Function]}
    >
      <Manager>
        <div
          className="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            aria-haspopup={true}
            caret={false}
            className="btn btn-link"
            color="secondary"
            nav={true}
          >
            <Reference>
              <InnerReference
                setReferenceNode={[Function]}
              >
                <a
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="btn btn-link nav-link"
                  href="#"
                  onClick={[Function]}
                >
                  <Memo(CloudCheckIcon)
                    className="icon-inline"
                    data-tooltip="Repositories up to date"
                  >
                    <svg
                      className="mdi-icon icon-inline"
                      data-tooltip="Repositories up to date"
                      fill="currentColor"
                      height={24}
                      viewBox="0 0 24 24"
                      width={24}
                    >
                      <path
                        d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                      />
                    </svg>
                  </Memo(CloudCheckIcon)>
                </a>
              </InnerReference>
            </Reference>
          </DropdownToggle>
          <DropdownMenu
            className="status-messages-nav-item__dropdown-menu"
            flip={true}
            right={true}
            tag="div"
          >
            <div
              aria-hidden={true}
              className="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
              role="menu"
              tabIndex="-1"
            >
              <h3>
                Code host status
              </h3>
              <div
                className="status-messages-nav-item__dropdown-menu-content"
              >
                <StatusMessagesNavItemEntry
                  entryType="warning"
                  key="0"
                  linkOnClick={[Function]}
                  linkText="Configure synced repositories"
                  linkTo="/site-admin/external-services"
                  showLink={true}
                  text="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                  title="Syncing repositories failed:"
                >
                  <div
                    className="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-warning"
                    key="syncer.sync.store.upsert-repos: pg: unique constraint foobar"
                  >
                    <h4>
                      <Memo(CloudAlertIcon)
                        className="icon-inline mr-1"
                      >
                        <svg
                          className="mdi-icon icon-inline mr-1"
                          fill="currentColor"
                          height={24}
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <path
                            d="M19,20H6C2.71,20 0,17.29 0,14C0,10.9 2.34,8.36 5.35,8.03C6.6,5.64 9.11,4 12,4C15.64,4 18.67,6.59 19.35,10.03C21.95,10.22 24,12.36 24,15C24,17.74 21.74,20 19,20M11,15V17H13V15H11M11,13H13V8H11V13Z"
                          />
                        </svg>
                      </Memo(CloudAlertIcon)>
                      Syncing repositories failed:
                    </h4>
                    <p>
                      syncer.sync.store.upsert-repos: pg: unique constraint foobar
                    </p>
                    <p
                      className="status-messages-nav-item__entry-link"
                    >
                      <AnchorLink
                        onClick={[Function]}
                        to="/site-admin/external-services"
                      >
                        <a
                          href="/site-admin/external-services"
                          onClick={[Function]}
                        >
                          Configure synced repositories
                        </a>
                      </AnchorLink>
                    </p>
                  </div>
                </StatusMessagesNavItemEntry>
              </div>
            </div>
          </DropdownMenu>
        </div>
      </Manager>
    </Dropdown>
  </ButtonDropdown>
</StatusMessagesNavItem>
`;
